script de deploy

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <div class="form-group">
        <h1>Benvinguts a la pagina enquestes UOC</h1>
     </div>
-
+    <div>
+       <h3>Presentació del projecte...</h3>
+    </div>
 </div>
-
 </body>
 </html>
